Altera cor do titulo

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1{
 }
 
 h1 span{
-    color: #232323;
+    color: blue;
 }
 
 
@@ -73,6 +73,7 @@ a{
 
 a:hover{
     background-color: #8233E8;
+    transition: 0.3s;
 }
 
 section img{
