Adicionado dark mode

--- a/style.css
+++ b/style.css
@@ -22,11 +22,24 @@
   box-sizing: border-box;
 }
 
-/* Estilo desktop */
-header img{
-    display: block;
-    margin: 75px 0 0 360px;
+.topo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 50px 170px;
 }
+
+
+.logo {
+    width: 210px;
+    height: auto;
+}
+
+.dark-mode {
+    cursor: pointer;
+}
+
+
 
 body{
     background-color: #ffffff;
@@ -83,6 +96,13 @@ section img{
     margin: 0 auto;
 }
 
+footer p{
+    font-size: 14px;
+    color: black;
+    margin: 50px auto 10px;
+}
+
+
 @media(max-width: 768px){
     header img{
         margin: 65px 0 0 60px;
@@ -94,9 +114,28 @@ section img{
 }
 
 @media(max-width: 430px){
-    header img{
-        margin: 32px 0 0 16px;
+
+    .topo{
+        margin: 0;
     }
+
+    .logo{
+        width: 150px;
+        height: auto;
+        margin-left: 15px;
+    }
+
+    .dark-mode{
+        width: 29px;
+        height: 29px;
+        margin-right: 15px;
+    }
+
+
+    h1{
+        font-size: 56px;
+    }
+
 
     p{
         font-size: 20px;
@@ -111,5 +150,10 @@ section img{
     section img{
         width: 340px;
         height: 230px;
+    }
+
+    footer p{
+        font-size: 10px;
+        
     }
 }
