--- a/style.css
+++ b/style.css
@@ -26,19 +26,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 50px 170px;
-}
-
-
-.logo {
-    width: 210px;
-    height: auto;
+    margin: 50px 170px 0;
 }
 
 .dark-mode {
     cursor: pointer;
 }
-
 
 
 body{
@@ -58,7 +51,6 @@ h1{
 h1 span{
     color: #232323;
 }
-
 
 p{
     font-size: 24px;
@@ -102,40 +94,26 @@ footer p{
     margin: 50px auto 10px;
 }
 
-
-@media(max-width: 768px){
-    header img{
-        margin: 65px 0 0 60px;
-    }
-
-    p{
-        width: 648px;
-    }
-}
-
 @media(max-width: 430px){
 
     .topo{
-        margin: 0;
+        margin: 25px 20px;
     }
 
     .logo{
         width: 150px;
         height: auto;
-        margin-left: 15px;
     }
 
     .dark-mode{
-        width: 29px;
-        height: 29px;
-        margin-right: 15px;
+        width: 30px;
+        height: 30px;
     }
-
 
     h1{
+        margin-top: 50px;
         font-size: 56px;
     }
-
 
     p{
         font-size: 20px;
